Use HTTPS instead of HTTP to resolve dependencies
This fixes a security vulnerability in this project where the `pom.xml`
files were configuring Maven to resolve dependencies over HTTP instead of
HTTPS.

Signed-off-by: Jonathan Leitschuh <Jonathan.Leitschuh@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -763,13 +763,13 @@
     <repositories>
         <repository>
             <id>arnaudroger-maven-repository</id>
-            <url>http://arnaudroger.github.io/maven</url>
+            <url>https://arnaudroger.github.io/maven</url>
         </repository>
     </repositories>
     <pluginRepositories>
         <pluginRepository>
             <id>arnaudroger-maven-plugin-repository</id>
-            <url>http://arnaudroger.github.io/maven</url>
+            <url>https://arnaudroger.github.io/maven</url>
         </pluginRepository>
     </pluginRepositories>
     <distributionManagement>
